--- a/.github/workflows/workflow-dispatch-multiple-input.yml
+++ b/.github/workflows/workflow-dispatch-multiple-input.yml
@@ -12,7 +12,7 @@ on:
         type: environment
       notify:
         description: "Notify of deployment?"
-        required: false
+        required: true
         default: false
         type: boolean
 
